[gd_scene load_steps=26 format=3 uid="uid://camem64xsobb8"]

[ext_resource type="Script" path="res://test/outline_test.gd" id="1_3d1rk"]
[ext_resource type="Script" path="res://components/interact_component/interact_component.gd" id="1_ikgyl"]
[ext_resource type="AudioStream" uid="uid://c8hxia1f2880m" path="res://test/Magic_Spells_Impact_Air24.wav" id="3_0yjyq"]
[ext_resource type="AudioStream" uid="uid://xjichg7qw17h" path="res://test/Magic_Spells_CastLong_Air_Charm02.wav" id="4_vp61t"]
[ext_resource type="Script" path="res://addons/shaker/src/Vector3/ShakerEmitter3D.gd" id="5_y030p"]
[ext_resource type="Script" path="res://components/misc/scaled_audio_player_3d.gd" id="6_vjlef"]
[ext_resource type="Script" path="res://addons/shaker/data/Vector3/BaseShakerType3D.gd" id="6_voje0"]
[ext_resource type="Script" path="res://addons/shaker/data/Vector3/ShakerTypeBrownianShake3D.gd" id="7_5jps3"]
[ext_resource type="Script" path="res://addons/shaker/data/Vector3/ShakerPreset3D.gd" id="8_cqklu"]
[ext_resource type="AudioStream" uid="uid://bqpbfu01veb7d" path="res://test/tler.wav" id="10_qpbn7"]
[ext_resource type="Script" path="res://components/entities/health_component.gd" id="11_5u15i"]
[ext_resource type="Script" path="res://components/entities/hitbox.gd" id="13_bbnim"]
[ext_resource type="Script" path="res://components/entities/enemy_marker.gd" id="14_xhn7x"]
[ext_resource type="Script" path="res://components/entities/hurtbox.gd" id="15_6xq2m"]
[ext_resource type="Script" path="res://components/misc/signal_connector.gd" id="15_mjpux"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dsd4s"]
radius = 2.947
height = 11.276

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_2g8np"]
stream_count = 2
stream_0/stream = ExtResource("3_0yjyq")
stream_0/volume = 0.0
stream_1/stream = ExtResource("4_vp61t")
stream_1/volume = 0.0

[sub_resource type="Resource" id="Resource_asclb"]
script = ExtResource("7_5jps3")
roughness = Vector3(1, 1, 1)
persistence = Vector3(0.5, 0.5, 0.5)
amplitude = Vector3(0.09, 0.03, 0.08)
offset = Vector3(0, 0, 0)
BlendingMode = 0
fade_in = 1e-05
fade_out = 1e-05
start_percent = 0.0
end_percent = 1.0
_temp_graph = false
bake_internal = 64

[sub_resource type="Resource" id="Resource_viiwt"]
script = ExtResource("8_cqklu")
PositionShake = Array[ExtResource("6_voje0")]([])
RotationShake = Array[ExtResource("6_voje0")]([SubResource("Resource_asclb")])
ScaleShake = Array[ExtResource("6_voje0")]([])
bake_internal = 64
__follow_timeline = false

[sub_resource type="SphereShape3D" id="SphereShape3D_bljxg"]
radius = 13.757

[sub_resource type="ViewportTexture" id="ViewportTexture_vmx31"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hfi2l"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="Theme" id="Theme_le2k6"]
ProgressBar/styles/fill = SubResource("StyleBoxFlat_hfi2l")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3f873"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iv7px"]

[node name="StaticBody3D" type="CharacterBody3D" node_paths=PackedStringArray("health_c", "healthbar", "enemy_marker", "audio") groups=["enemy"]]
collision_layer = 64
script = ExtResource("1_3d1rk")
health_c = NodePath("HealthComponent")
healthbar = NodePath("SubViewport/ProgressBar")
enemy_marker = NodePath("EnemyMarker")
audio = NodePath("ShakerEmitter3D/Area3D/AudioStreamPlayer3D2")

[node name="InteractComponent" type="Area3D" parent="."]
script = ExtResource("1_ikgyl")
show_text = true
what_text = "Hit it!"

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractComponent"]
shape = SubResource("CapsuleShape3D_dsd4s")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamSynchronized_2g8np")
max_distance = 74.3
attenuation_filter_cutoff_hz = 19845.0
doppler_tracking = 2
script = ExtResource("6_vjlef")

[node name="ShakerEmitter3D" type="Node3D" parent="."]
script = ExtResource("5_y030p")
emit = true
fade_in = 0.0941009
fade_out = 0.0556131
shakerPreset = SubResource("Resource_viiwt")

[node name="Area3D" type="Area3D" parent="ShakerEmitter3D"]
collision_layer = 512
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="ShakerEmitter3D/Area3D"]
shape = SubResource("SphereShape3D_bljxg")

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="ShakerEmitter3D/Area3D"]
stream = ExtResource("10_qpbn7")
autoplay = true
attenuation_filter_cutoff_hz = 8395.0
attenuation_filter_db = -15.6
doppler_tracking = 2
script = ExtResource("6_vjlef")
influence = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_dsd4s")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.368801, 0)
light_energy = 2.326
light_volumetric_fog_energy = 2.414
omni_range = 31.425

[node name="HealthComponent" type="Node" parent="." node_paths=PackedStringArray("hurtbox")]
script = ExtResource("11_5u15i")
hurtbox = NodePath("../Hurtbox")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, 0)
billboard = 1
no_depth_test = true
texture_filter = 0
texture = SubResource("ViewportTexture_vmx31")

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(512, 64)

[node name="ProgressBar" type="ProgressBar" parent="SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_le2k6")
theme_override_styles/fill = SubResource("StyleBoxFlat_3f873")
max_value = 5.0
step = 1.0
value = 5.0
show_percentage = false

[node name="Hitbox" type="Area3D" parent="."]
script = ExtResource("13_bbnim")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
shape = SubResource("CapsuleShape3D_dsd4s")

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
light_color = Color(0.466667, 0, 1, 1)
omni_range = 7.448

[node name="EnemyMarker" type="Node" parent="."]
script = ExtResource("14_xhn7x")

[node name="SignalConnector" type="Node" parent="." node_paths=PackedStringArray("from", "to")]
script = ExtResource("15_mjpux")
from = NodePath("../HealthComponent")
what = "health_changed"
to = NodePath("..")
method = "tween_force_mosh"

[node name="Hurtbox" type="Area3D" parent="."]
script = ExtResource("15_6xq2m")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
shape = SubResource("CapsuleShape3D_iv7px")
